# CloudForge

./: AGENTS.md  README.md  pyproject.toml
cloudforge/: cli.py  main.py  settings.py
cloudforge/agent/: modifier.py  prompts.py  tools.py
cloudforge/github_app/: commenter.py  poller.py  pr.py
cloudforge/infra/: aws.py  fakes.py  github.py
cloudforge/models/: discovery.py
cloudforge/validation/: aws_dryrun.py
examples/: issue_add_lifecycle_rules.md  issue_add_public_check.md  issue_add_versioning.md
external_infra_microservice/: public_utils.py
tests/: conftest.py  test_aws_dryrun.py  test_models.py  test_modifier.py  test_poller.py  test_tools.py
yamls/: s3_discovery.yaml  s3_discovery_example2.yaml
