[project]
name = "cloudforge"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic-ai-slim[openai]>=1.100.0",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "boto3>=1.34",
    "botocore>=1.34",
    "PyGithub>=2.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
cloudforge = "cloudforge.cli:main"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["cloudforge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
